Enhance options.html with theme and effect selectors
Added theme and title effect selectors to options.html.

--- a/Dzbackdor-Link-Shell/options.html
+++ b/Dzbackdor-Link-Shell/options.html
@@ -12,10 +12,34 @@
 
   <!-- Bagian Export/Import -->
   <section class="import-export">
-    <button id="exportBtn">📥 Export JSON</button>
-    <button id="importBtn">📤 Import JSON</button>
+    <button id="exportBtn">Export JSON</button>
+    <button id="importBtn">Import JSON</button>
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </section>
+
+  <!-- Bagian Theme Selector -->
+  <section class="theme-selector">
+    <h3>Theme</h3>
+    <div class="theme-options">
+      <button class="theme-btn" data-theme="cyberpunk">Cyberpunk</button>
+      <button class="theme-btn" data-theme="matrix">Matrix</button>
+      <button class="theme-btn" data-theme="purple">Purple</button>
+      <button class="theme-btn" data-theme="red">Red Terminal</button>
+    </div>
+  </section>
+  
+<!-- BAGIAN BARU: Title Effect Selector -->
+<section class="effect-selector">
+  <h3>Title Effect</h3>
+<div class="effect-options">
+  <button class="effect-btn" data-effect="glitch">Glitch</button>
+  <button class="effect-btn" data-effect="typewriter">Typewriter</button>
+  <button class="effect-btn" data-effect="neon">Neon Flicker</button>
+  <button class="effect-btn" data-effect="pulse">Pulse</button>
+  <button class="effect-btn" data-effect="wave">Wave</button>
+  <button class="effect-btn" data-effect="simple">Simple Glow</button>
+</div>
+</section>
 
   <hr>
 
