Add title-effects.css stylesheet and data attribute

--- a/Dzbackdor-Link-Shell/popup.html
+++ b/Dzbackdor-Link-Shell/popup.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>Link Shell</title>
   <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="title-effects.css">
 </head>
 <body>
 
 <header>
-  <h1>Dzbackdor Link Shell</h1>
+  <h1 data-text="Dzbackdor Link Shell">Dzbackdor Link Shell</h1>
   <div class="search-container">
     <input id="search" placeholder="Search..." />
     <button id="settings">⚙</button>
